# tu-arte-mi-arte

./: .env.example  .gitignore  CLAUDE.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: art_direction.toml  batch.toml  house.toml  room.toml  split.toml  tv_deploy.toml  tvs.toml  tvs.toml.example
docs/: DEPLOY.md  matte_investigation.md
scripts/: demo_batch_2_3_finalize.py  demo_batch_2_4_eta_vs_actual.py  demo_batch_2_6_end_to_end.py  demo_batch_4_1_upload.py  demo_batch_4_2_rotation.py  eval_batch_day_diversity.py  eval_batch_grouping.py  eval_batch_load_skill_followup.py  eval_batch_partial_report.py  eval_batch_split_ratio.py  eval_coherence.py  eval_concept_stage.py  eval_framing.py  eval_partial_failure.py  run_agent_set.py  spike_matte_gallery.py  spike_tv_write_path.py
src/agents/tu_arte_mi_arte/: agent.py
src/agents/tu_arte_mi_arte/skills/galeria-por-lotes/: SKILL.md
src/bot/: preview_store.py  session_store.py  telegram_bot.py
src/engine/: art_direction.py  batch.py  batch_store.py  deploy_history.py  generation.py  house_clock.py  preview.py  split.py  tv_deploy.py  tv_discovery.py
src/motor/: generacion.py
tests/: test_agent_smoke.py  test_art_direction.py  test_bot_preview_store.py  test_bot_session_store.py  test_bot_telegram.py  test_engine_batch.py  test_engine_batch_store.py  test_engine_deploy_history.py  test_engine_generation.py  test_engine_house_clock.py  test_engine_preview.py  test_engine_split.py  test_engine_tv_deploy.py  test_engine_tv_discovery.py  test_motor_generacion.py
